# Desafios-Bootcamp-Santander-DIO-2025-Python

./: README.md  desafio-01.py  desafio-02-Estrutura-de-dados.py  desafio-03-POO.py  desafios-04-05-decorador-iterador-gerador-datas-timezones.py
Desafio 06.01 WorkoutApi/: Makefile  alembic.ini  docker-compose.yml  requirements.txt  run.ps1
Desafio 06.01 WorkoutApi/alembic/: env.py
Desafio 06.01 WorkoutApi/alembic/versions/: 17e7ee01d65b_create_initial_tables.py  5a63024f5cb6_init_db.py  955e871a3ff5_init_db.py  c79d8e1171ae_create_initial_tables.py
Desafio 06.01 WorkoutApi/workout_api/: make.ps1
Desafio 06.01 WorkoutApi/workout_api/atleta/: models.py
Desafio 06.01 WorkoutApi/workout_api/categorias/: models.py
Desafio 06.01 WorkoutApi/workout_api/centro_treinamento/: models.py
Desafio 06.01 WorkoutApi/workout_api/configs/: settings.py
Desafio 06.01 WorkoutApi/workout_api/originais/: main.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/: .pre-commit-config.yaml  Makefile  pyproject.toml
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/store/controllers/: product.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/store/core/: config.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/store/db/: mongo.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/store/schemas/: product.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/store/usecases/: product.py
Desafio Criando Uma API Com FastAPI Utilizando TDD/store_api/tests/: conftest.py
(+10 files in other folders)
